--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,10 @@ javacard {
   sdkVersion = "3.0.4"
 
   cap {
-    aid = '0xA0:0x00:0x00:0x08:0x04:0x00:0x01'
-//    aid = '0x0F:0x00:0xBA:0x00:0x00:0x00:0x01'
+    aid = '0x0F:0x00:0xBA:0x00:0x00:0x00:0x01'
     packageName = 'org.gitian.javacard'
     applet {
-      aid = '0xA0:0x00:0x00:0x08:0x04:0x00:0x01:0x01'
-//      aid = '0x0F:0x00:0xBA:0x00:0x00:0x00:0x01:0x01'
+      aid = '0x0F:0x00:0xBA:0x00:0x00:0x00:0x01:0x01'
       className = 'HelloWorldApplet'
     }
     version = '0.1'
